# soltana-ui

./: .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .stylelintignore  .stylelintrc.json  README.md  ROADMAP.md  eslint.config.js  package-lock.json  package.json  playwright.a11y-matrix.config.ts  playwright.config.ts  pnpm-lock.yaml  soltana.config.template.js  tsconfig.json  tsconfig.plugins.json  turbo.json  vite.config.ts
.changeset/: README.md  config.json
.claude/: settings.json
.claude/agents/: README.md  dependency-impact.md  reference.yaml  tier-composition-check.md  visual-regression-check.md
.claude/audit/: scopes.md
.claude/commands/: eval-docs.md  eval-params.md  eval-tests.md
.claude/rules/: commits.md  project.md
.github/workflows/: a11y-matrix.yml  ci.yml  release.yml  release.yml.disabled  update-snapshots.yml
apps/docs/: docs.scss  index.html  main.ts  package.json  tsconfig.json  vite.config.ts
docs/: docs.scss  index.html  main.ts
docs/components/: PlaygroundControls.ts  SettingsPanel.ts  TabRouter.ts  ThemeManager.ts
docs/pages/: components.ts  design-system.ts  examples.ts  foundation.ts  getting-started.ts  materials.ts  (+3 more)
python/soltana-matplotlib/: pyproject.toml
python/soltana-matplotlib/soltana_matplotlib/: __init__.py  dark.mplstyle  light.mplstyle  sepia.mplstyle
python/soltana-matplotlib/tests/: test_styles.py  test_visual.py
src/: index.ts
tests/: accessibility-utilities.spec.ts  accessibility.spec.ts  element-overrides.spec.ts  global-setup.ts  visual-regression.spec.ts
(+236 files in other folders)
